added end session endpoint
